--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="root">
     <header class="header root__section">
-      <img src="<%=require('./images/logo.svg').default%>" alt="mesto logo" class="logo">
+      <img src="./images/logo.svg" alt="mesto logo" class="logo">
     </header>
     <div class="profile root__section">
       <div class="user-info">
@@ -45,14 +45,14 @@
     </div>
       <div class="popup popup-img">
         <div class="popup-img__content">
-            <img src="<%=require('./images/close.svg').default%>" alt="" class="popup__close">
+            <img src="./images/close.svg" alt="" class="popup__close">
             <img src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="" class="popup-img__cart">
         </div>
       </div>
    
     <div class="popup popup_add-plase">
       <div class="popup__content">
-        <img src="<%=require('./images/close.svg').default%>" alt="" class="popup__close">
+        <img src="<./images/close.svg'" alt="" class="popup__close">
         <h3 class="popup__title">Новое место</h3>
         <form class="popup__form" name="formCards">
             <input type="text" name="name" class="popup__input popup__input_type_name"
