--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
    <div class="popup popup_autor">
         <div class="popup__content">
-            <img src="<%=require('./images/close.svg').default%>" alt="" class="popup__close">
+            <img src="./images/close.svg" alt="" class="popup__close">
             <h3 class="popup__title">Редактировать профиль</h3>
             <form class="popup__form" name="formProfile">
                 <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя"
