--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
    
     <div class="popup popup_add-plase">
       <div class="popup__content">
-        <img src="<./images/close.svg'" alt="" class="popup__close">
+        <img src="./images/close.svg" alt="" class="popup__close">
         <h3 class="popup__title">Новое место</h3>
         <form class="popup__form" name="formCards">
             <input type="text" name="name" class="popup__input popup__input_type_name"
