--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mesto</title>
-  <link rel="stylesheet" href="style.0369b53ef542e4bc7193.css">
+  <link rel="stylesheet" href="style.c843782601754f8a933e.css">
 </head>
 <body>
   <div class="root">
@@ -67,6 +67,6 @@
       </div>
     </div>
   </div> 
-  <script src="main.ea64160bd80450443e2f.js" type="module"></script>
+  <script src="main.c49ddb0ee3378a5eda37.js"></script>
 </body>
 </html>
