--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,6 @@
       </div>
     </div>
   </div> 
-  <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>" type="module"></script>
+  <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
 </body>
 </html>
